<resources>
    <string name="app_name">Wallpaper Trending</string>
    <string name="preferencesName">WallpaperTrendingPrefs</string>


    <!--Download Location-->
    <string name="downloadLocation">/Wallpaper Trending/WallpaperTrending Downloads</string>


    <!--App Strings -->
    <string name="search">Tell me what you are searching for , \n I will do the rest!</string>
    <string name="search404">Sorry, No wallpapers found for \n</string>
    <string name="search_query_hint">What are you looking for ?</string>
    <string name="search_query">Searching wallpapers for </string>
    <string name="downloadWallBtn">Download</string>
    <string name="setWallBtn">Set</string>
    <string name="delete">Delete</string>

    <string name="applyingWall">Applying Wallpaper</string>

    <!--Intro Activity-->
    <string name="explore"><b>Explore</b></string>

    <!--About Me-->
    <string name="myname">Anand Gaur</string>
    <string name="aboutme">Android Developer\n\nAll that I am, or hope to be,\nI owe to my angel mother.</string>
    <string name="copyright_claim">Copyright / Claim</string>
    <string name="cpyrghtText">I do not own or claim copyright to the images used in the app
                                all the work belongs to their original owners.
                                The images in the app are only for personal use and
                                should not be selled or distributed without
                                the consent of their owners. :)</string>

    <string name="shareApp">Share App with Friends</string>
    <string name="shareText">Hey checkout this Awesome Wallpaper Trending app I found !, You can browsing more than 50000+ Wallpapers that fits your device Resolution and Set wallpaper without downloading and Get new HD Wallpapers daily\nhttp://play.google.com/store/apps/details?id=</string>
    <string name="rateApp">Rate app on PlayStore</string>

    <string name="CATEGORY_BANNED_ID">ca-app-pub-6586022251841332/6672383708</string>

    <string name="FULLSCREEN_BANNER_ID">ca-app-pub-6586022251841332/7907490040</string>
    <string name="BANNER_ID">ca-app-pub-6586022251841332/3968245034</string>
    <string name="INTERSTITIAL_AD">ca-app-pub-6586022251841332/6356812641</string>

    <string name="toFullScreenTransition">to full screen</string>
    <string name="NATIVE_AD_ID">native</string>
    <string name="App_ID">ca-app-pub-6586022251841332~5267092252</string>

    <string name="facebookLink">https://www.facebook.com/anandgaur22</string>
    <string name="gmail">anandgaur22@gmail.com</string>
    <string name="linkedinLink">https://www.linkedin.com/in/anand-gaur-498ab8a4</string>
    <string name="backpresed_yes">YES</string>
    <string name="backpresed_cancel">CANCEL</string>


    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
</resources>
