<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="false"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true" />

    <ImageView
        android:id="@+id/zoom_heart"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/fav_zoom_heart"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            android:background="@color/translucentBlackColor"
            ads:adUnitId="@string/FULLSCREEN_BANNER_ID">

        </com.google.android.gms.ads.AdView>

        <android.support.v7.widget.CardView
            android:id="@+id/disableAdBlock"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Disable AdBlock and support development!"
                android:textSize="16dp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_above="@id/bannerAdView"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/downloadWallBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/translucentBlackColor"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/downloadWallBtn"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/setWallBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/translucentBlackColor"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/setWallBtn"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>
</RelativeLayout>