<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/search_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/transparentColor"
            app:cardCornerRadius="4dp">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:drawableRight="@drawable/cancel_search"
                android:hint="@string/search_query_hint"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions|text"
                android:maxLines="1"
                android:textSize="18sp"
                android:padding="12dp"
                android:textColor="@color/textColorHint"
                android:textColorHint="@color/textColorHint"
                android:textCursorDrawable="@null" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/searchFragment_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_cardView"
            android:layout_marginBottom="62dp">

        </android.support.v7.widget.RecyclerView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_below="@id/search_cardView"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/searching_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animation_view"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:text="@string/search_query"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/query_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searching_query"
            android:layout_centerHorizontal="true"
            android:text="[QUERY]"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/search_wall_placeholder"
            android:layout_width="188dp"
            android:layout_height="150dp"
            android:layout_below="@id/search_cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:src="@drawable/searchwall" />

        <TextView
            android:id="@+id/search_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_wall_placeholder"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:text="@string/search"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="16dp" />
    </RelativeLayout>


</LinearLayout>