<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        app:theme="@style/ToolBarStyle">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Profile-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:id="@+id/myInfo"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:background="@color/colorPrimary">


                    <ImageView
                        android:id="@+id/codingScreen"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/codingscreen" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="65dp"
                        android:scaleX="-1"
                        android:src="@drawable/me"
                        app:civ_border_color="@color/translucentBlackColor"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/Myname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profile_image"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="4dp"
                        android:fontFamily="monospace"
                        android:text="@string/myname"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Myname"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="monospace"
                        android:text="@string/aboutme"
                        android:textColor="@android:color/white"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/facebook"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/facebook" />

                        <ImageView
                            android:id="@+id/gmail"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/gmail" />

                        <ImageView
                            android:id="@+id/linkedIn"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/linkedin" />

                    </LinearLayout>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:theme="@style/AppTheme.FullScreen">

                    <TextView
                        android:id="@+id/shareApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:text="@string/shareApp"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@color/colorBackground" />

                    <TextView
                        android:id="@+id/rateApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:text="@string/rateApp"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/copyright_claim"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="monospace"
                        android:text="@string/cpyrghtText"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


    <!--<android.support.v7.widget.CardView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="6dp"-->
    <!--android:background="@color/colorPrimary"-->
    <!--app:cardCornerRadius="4dp">-->

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/colorPrimary">-->

    <!--<ImageView-->
    <!--android:id="@+id/appImg"-->
    <!--android:layout_width="80dp"-->
    <!--android:layout_height="80dp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:src="@drawable/searchwall" />-->

    <!--<TextView-->
    <!--android:id="@+id/appName"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/appImg"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_margin="4dp"-->
    <!--android:text="@string/app_name"-->
    <!--android:textColor="@color/colorAccent"-->
    <!--android:textSize="24sp" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/appName"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_margin="4dp"-->
    <!--android:text="The best Wallpaper app on Playstore"-->
    <!--android:textColor="@android:color/white"-->
    <!--android:textSize="14sp" -->
    <!--android:fontFamily="monospace"/>-->

    <!--</RelativeLayout>-->

    <!--</android.support.v7.widget.CardView>-->